sendingn client data to data base

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to My E-Commerce Store</h1>
-    <a href="./login/index.html">login page</a>
+    <a href="./src/login/index.html">login page</a>
+    <a href="./src/registration/index.html">go to registration</a>
 </body>
 </html>
