creating dashboard on going

--- a/public/src/dashboard/index.html
+++ b/public/src/dashboard/index.html
@@ -9,5 +9,8 @@
 <body>
     <a href="http://localhost:3000/login/">login</a>
     <a href="http://localhost:3000/registration/">registration</a>
+
+    <button class="logoutBtn">Log out</button>
 </body>
+<script type="module" src="./script.js"></script>
 </html>
