--- a/public/src/login/index.html
+++ b/public/src/login/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
 </head>
 <body>
-    
+    <center>
+        <div class="form-container">
+            <h1 class="response"></h1>
+
+            <form method="post" class="form">
+                <span class="material-symbols-outlined">
+                    person
+                </span>
+                <input type="text" name="name" class="userName" placeholder="Username" required>
+                <input type="password" name="password" class="new-password" n placeholder="Enter password" required>
+                <button type="submit" class="submitBtn">Log in</button>
+
+            </form>
+
+            <h2 class="regError"></h2>
+        </div>
+    </center>
 </body>
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
 </html>
