--- a/public/src/login/index.html
+++ b/public/src/login/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
 </head>
+
 <body>
     <center>
         <div class="form-container">
             <h1 class="response"></h1>
 
-            <form method="post" class="form">
-                <span class="material-symbols-outlined">
-                    person
-                </span>
-                <input type="text" name="name" class="userName" placeholder="Username" required>
-                <input type="password" name="password" class="new-password" n placeholder="Enter password" required>
-                <button type="submit" class="submitBtn">Log in</button>
+            <form class="form">
+                <fieldset>
+                    <legend>
+                        <span class="material-symbols-outlined">
+                            person
+                        </span>
+                    </legend>
+
+                    <input type="text" name="name" class="userName" placeholder="crn" required>
+                    <input type="password" name="password" class="new-password" n placeholder="Enter password" required>
+                    <button type="submit" class="submitBtn">Log in</button>
+                </fieldset>
 
             </form>
 
@@ -27,4 +35,5 @@
     </center>
 </body>
 <script type="module" src="script.js"></script>
+
 </html>
